--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ classifiers =
 packages = find:
 python_requires = >= 3.6
 install_requires =
-    pyyaml == 5.2
+    pyyaml >= 5.4
     click == 7.1.2
 include_package_data = True
 
